# traceline

./: .clang-format  .clang-tidy  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_fusion.cpp  bench_telemetry_bus.cpp
docs/: ai-workflow.md  design.md  requirements.md
fuzz/: CMakeLists.txt  fuzz_flight_recorder.cpp
include/traceline/: flight_recorder.hpp  fusion.hpp  linalg.hpp  sensor.hpp  telemetry_bus.hpp  types.hpp
src/: flight_recorder.cpp  fusion.cpp  sensor.cpp  telemetry_bus.cpp
tests/: CMakeLists.txt  test_flight_recorder.cpp  test_fusion.cpp  test_fusion_properties.cpp  test_replay_format.cpp  test_sensor.cpp  test_telemetry_bus.cpp
tools/: CMakeLists.txt  replay_format.cpp  replay_format.hpp  replay_main.cpp
